--- a/wercker.yml
+++ b/wercker.yml
@@ -5,3 +5,10 @@ build:
         version: "0.18.1"
         theme: Hugo-Octopress
         flags: --buildDrafts=false
+deploy:
+  steps:
+    - install-packages:
+        packages: git ssh-client
+    - lukevivier/gh-pages@0.2.1:
+        token: $GIT_TOKEN
+        basedir: public
